--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,7 @@
-<div class="row">
-
-  <!-- SIDE MENU -->
-  <div class="col-md-2 col-lg-2">
-      <app-side-nav></app-side-nav>
-  </div>
-
-  <!-- MAIN CONTENT -->
-  <div class="col-md-10 col-lg-10">
-     <router-outlet></router-outlet>
-  </div>
-
+<div class="jumbotron"> 
+  <h1>Welcome!</h1> 
+  <p>This is a simple Angular 5 online store demo showing shopping cart features. Please click button below to start exploring products.</p> 
+  <p>
+    <a routerLink="/products" href="" class="btn btn-primary btn-lg" role="button">View Products</a>
+  </p>
 </div>
