--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -1,5 +1,5 @@
 <ul class="nav nav-pills nav-stacked nav-pills-stacked-example"> 
-  <li routerLinkActive="active" role="presentation"><a href="" routerLink="/home/guitars">Guitars</a></li> 
-  <li routerLinkActive="active" role="presentation"><a href="" routerLink="/home/pedals">Pedals</a></li> 
-  <li routerLinkActive="active" role="presentation"><a href="" routerLink="/home/accessories">Accessories</a></li>
+  <li routerLinkActive="active" role="presentation"><a href="" routerLink="/products/guitars">Guitars</a></li> 
+  <li routerLinkActive="active" role="presentation"><a href="" routerLink="/products/pedals">Pedals</a></li> 
+  <li routerLinkActive="active" role="presentation"><a href="" routerLink="/products/accessories">Accessories</a></li>
  </ul>
